--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "eslint": "^5.4.0",
     "nodemon": "^1.18.3"
   }
 }
